# TVM-Solidity-Compiler

./: .editorconfig  .gitignore  API.md  Cargo.toml  Changelog.md  Changelog_TON.md  Makefile  README.md  rustfmt.toml
.github/workflows/: release.yaml  release.yml
compiler/: .gitignore  CMakeLists.txt  Changelog_TON.md
compiler/cmake/: EthCompilerSettings.cmake
compiler/cmake/scripts/: buildinfo.cmake
compiler/cmake/toolchains/: default.cmake  libfuzzer.cmake  ossfuzz.cmake
compiler/lib/: stdlib_sol.tvm
compiler/liblangutil/: CMakeLists.txt  EVMVersion.cpp  EVMVersion.h  ErrorReporter.cpp  ErrorReporter.h  Scanner.cpp  SemVerHandler.cpp  SourceReferenceFormatterHuman.cpp  TVMVersion.h  Token.cpp  Token.h
compiler/libsolc/: libsolc.cpp  libsolc.h
compiler/libsolidity/: CMakeLists.txt
compiler/libsolidity/analysis/: ContractLevelChecker.cpp  ContractLevelChecker.h  ControlFlowAnalyzer.cpp  ControlFlowBuilder.cpp  ControlFlowBuilder.h  ControlFlowGraph.h  DeclarationTypeChecker.cpp  DeclarationTypeChecker.h  DocStringTagParser.cpp  GlobalContext.cpp  NameAndTypeResolver.cpp  NameAndTypeResolver.h  OverrideChecker.cpp  PostTypeChecker.cpp  ReferencesResolver.cpp  ReferencesResolver.h  StaticAnalyzer.cpp  StaticAnalyzer.h  SyntaxChecker.cpp  SyntaxChecker.h  TypeChecker.cpp  TypeChecker.h  ViewPureChecker.cpp  ViewPureChecker.h
compiler/libsolidity/ast/: AST.cpp  AST.h  ASTAnnotations.h  ASTEnums.h  ASTForward.h  ASTJsonConverter.cpp  ASTJsonConverter.h  ASTJsonExporter.cpp  ASTJsonExporter.h  ASTJsonImporter.cpp  ASTJsonImporter.h  ASTVisitor.h  AST_accept.h  TypeProvider.cpp  TypeProvider.h  Types.cpp  Types.h
compiler/libsolidity/codegen/: ArrayUtils.cpp  ContractCompiler.cpp  DictOperations.cpp  DictOperations.hpp  ExpressionCompiler.cpp  LValue.cpp  PeepholeOptimizer.cpp  PeepholeOptimizer.hpp  SizeOptimizer.cpp  SizeOptimizer.hpp  StackOpcodeSquasher.cpp  StackOpcodeSquasher.hpp  StackOptimizer.cpp  StackOptimizer.hpp  TVM.cpp  TVM.h  TVM.hpp  TVMABI.cpp  TVMABI.hpp  TVMAnalyzer.cpp  TVMAnalyzer.hpp  TVMCommons.cpp  TVMCommons.hpp  TVMCompiler.hpp  TVMConstants.hpp  TVMContractCompiler.cpp  TVMContractCompiler.hpp  TVMExpressionCompiler.cpp  TVMExpressionCompiler.hpp  TVMFunctionCall.cpp  TVMFunctionCall.hpp  TVMFunctionCompiler.cpp  TVMFunctionCompiler.hpp  TVMInlineFunctionChecker.cpp  TVMInlineFunctionChecker.hpp  TVMIntrinsics.cpp  TVMIntrinsics.hpp  TVMOptimizations.cpp  TVMOptimizations.hpp  TVMPusher.cpp  (+11 more)
compiler/libsolidity/experimental/analysis/: SyntaxRestrictor.cpp  SyntaxRestrictor.h  TypeInference.cpp  TypeInference.h  TypeRegistration.cpp
compiler/libsolidity/interface/: CompilerStack.cpp  CompilerStack.h  ReadFile.h  StandardCompiler.cpp  StandardCompiler.h  Version.cpp
compiler/libsolidity/lsp/: LanguageServer.cpp  RenameSymbol.cpp  RenameSymbol.h
compiler/libsolidity/parsing/: DocStringParser.cpp  Parser.cpp  Parser.h
compiler/libsolutil/: UTF8.cpp  UTF8.h
compiler/samples/: stdlib_sol.tvm
compiler/scripts/: gzip.js  install_deps.sh  install_lib_variable.sh  release_ppa.sh
compiler/solc/: CommandLineInterface.cpp  CommandLineInterface.h  CommandLineParser.cpp  CommandLineParser.h  main.cpp
compiler/test/libsolidity/: SolidityScanner.cpp
compiler/test/libsolidity/ABIJson/test/lol.json/: basic_test.sol_json.ast
docs/internal/: stateInit_hash.md
lib/: stdlib.sol  stdlib_sol.tvm
script/: toolchain.sh  util.sh
sold/: Cargo.toml  README.md  build.rs
sold/src/: bindings-freebsd.rs  bindings-linux.rs  bindings-macos.rs  bindings-windows.rs  lib.rs  libsolc.rs  main.rs  printer.rs
sold/tests/: AbiJson.sol  Abstract.sol  Combined.sol  CycleA.sol  CycleB.sol  ErrorReporting.sol  FunctionId.sol  ImportRemote.sol  Init.sol  Library.sol  Multi.sol  Trivial.sol  tests.rs
sold/tests/remote/: Remote.sol
