[package]
edition = '2021'
name = 'sold'
version = '0.76.0'

[[bin]]
name = 'sold'
path = 'src/main.rs'

[dependencies]
anyhow = "1.0.81"
atty = '0.2'
dunce = '1.0'
failure = '0.1.8'
once_cell = '1.19'
serde_json = { features = ['unbounded_depth'], version = '1.0' }
strip-ansi-escapes = '0.2'

clap = { features = ['derive'], version = '4.5' }
serde = { features = ['derive'], version = '1.0' }

tvm_abi = { git = 'https://github.com/tvmlabs/tvm-sdk.git', tag = "v2.3.0.an" }
tvm_assembler = { git = 'https://github.com/tvmlabs/tvm-sdk.git', tag = "v2.3.0.an", features = [
  'gosh',
] }
tvm_block = { git = 'https://github.com/tvmlabs/tvm-sdk.git', tag = "v2.3.0.an" }
tvm_types = { git = 'https://github.com/tvmlabs/tvm-sdk.git', tag = "v2.3.0.an" }

[build-dependencies]
cmake = '0.1'

[dev-dependencies]
assert_cmd = '2.0'
predicates = '3.1'

[lib]
name = 'sold_lib'
path = 'src/lib.rs'
