# Until we have a clear separation, libyul has to be included here
set(sources
	analysis/ConstantEvaluator.cpp
	analysis/ConstantEvaluator.h
	analysis/ContractLevelChecker.cpp
	analysis/ContractLevelChecker.h
	analysis/ControlFlowAnalyzer.cpp
	analysis/ControlFlowAnalyzer.h
	analysis/ControlFlowBuilder.cpp
	analysis/ControlFlowBuilder.h
	analysis/ControlFlowGraph.cpp
	analysis/ControlFlowGraph.h
	analysis/ControlFlowRevertPruner.cpp
	analysis/ControlFlowRevertPruner.h
	analysis/DeclarationContainer.cpp
	analysis/DeclarationContainer.h
	analysis/DeclarationTypeChecker.cpp
	analysis/DeclarationTypeChecker.h
	analysis/DocStringAnalyser.cpp
	analysis/DocStringAnalyser.h
	analysis/DocStringTagParser.cpp
	analysis/DocStringTagParser.h
	analysis/FunctionCallGraph.cpp
	analysis/FunctionCallGraph.h
	analysis/ImmutableValidator.cpp
	analysis/ImmutableValidator.h
	analysis/GlobalContext.cpp
	analysis/GlobalContext.h
	analysis/NameAndTypeResolver.cpp
	analysis/NameAndTypeResolver.h
	analysis/OverrideChecker.cpp
	analysis/OverrideChecker.h
	analysis/PostTypeChecker.cpp
	analysis/PostTypeChecker.h
	analysis/PostTypeContractLevelChecker.cpp
	analysis/PostTypeContractLevelChecker.h
	analysis/ReferencesResolver.cpp
	analysis/ReferencesResolver.h
	analysis/Scoper.cpp
	analysis/Scoper.h
	analysis/StaticAnalyzer.cpp
	analysis/StaticAnalyzer.h
	analysis/SyntaxChecker.cpp
	analysis/SyntaxChecker.h
	analysis/TypeChecker.cpp
	analysis/TypeChecker.h
	analysis/ViewPureChecker.cpp
	analysis/ViewPureChecker.h
	ast/AST.cpp
	ast/AST.h
	ast/AST_accept.h
	ast/ASTAnnotations.cpp
	ast/ASTAnnotations.h
	ast/ASTEnums.h
	ast/ASTForward.h
	ast/ASTJsonExporter.cpp
	ast/ASTJsonExporter.h
	ast/ASTUtils.cpp
	ast/ASTUtils.h
	ast/ASTJsonImporter.cpp
	ast/ASTJsonImporter.h
	ast/ASTVisitor.h
	ast/CallGraph.cpp
	ast/CallGraph.h
	ast/ExperimentalFeatures.h
	ast/UserDefinableOperators.h
	ast/Types.cpp
	ast/Types.h
	ast/TypeProvider.cpp
	ast/TypeProvider.h
	interface/CompilerStack.cpp
	interface/CompilerStack.h
	interface/DebugSettings.h
	interface/FileReader.cpp
	interface/FileReader.h
	interface/ImportRemapper.cpp
	interface/ImportRemapper.h
	interface/Natspec.cpp
	interface/Natspec.h
	interface/OptimiserSettings.h
	interface/ReadFile.h
	interface/SMTSolverCommand.cpp
	interface/SMTSolverCommand.h
	interface/StandardCompiler.cpp
	interface/StandardCompiler.h
	interface/Version.cpp
	interface/Version.h
	lsp/DocumentHoverHandler.cpp
	lsp/DocumentHoverHandler.h
	lsp/FileRepository.cpp
	lsp/FileRepository.h
	lsp/GotoDefinition.cpp
	lsp/GotoDefinition.h
	lsp/RenameSymbol.cpp
	lsp/RenameSymbol.h
	lsp/HandlerBase.cpp
	lsp/HandlerBase.h
	lsp/LanguageServer.cpp
	lsp/LanguageServer.h
	lsp/SemanticTokensBuilder.cpp
	lsp/SemanticTokensBuilder.h
	lsp/Transport.cpp
	lsp/Transport.h
	lsp/Utils.cpp
	lsp/Utils.h
	parsing/DocStringParser.cpp
	parsing/DocStringParser.h
	parsing/Parser.cpp
	parsing/Parser.h
	parsing/Token.h
	experimental/analysis/Analysis.cpp
	experimental/analysis/Analysis.h
	experimental/analysis/DebugWarner.cpp
	experimental/analysis/DebugWarner.h
	experimental/analysis/FunctionDependencyAnalysis.cpp
	experimental/analysis/FunctionDependencyAnalysis.h
	experimental/analysis/TypeClassRegistration.cpp
	experimental/analysis/TypeClassRegistration.h
	experimental/analysis/TypeInference.cpp
	experimental/analysis/TypeInference.h
	experimental/analysis/TypeRegistration.cpp
	experimental/analysis/TypeRegistration.h
	experimental/analysis/SyntaxRestrictor.cpp
	experimental/analysis/SyntaxRestrictor.h
	experimental/ast/FunctionCallGraph.h
	experimental/ast/Type.cpp
	experimental/ast/Type.h
	experimental/ast/TypeSystem.cpp
	experimental/ast/TypeSystem.h
	experimental/ast/TypeSystemHelper.cpp
	experimental/ast/TypeSystemHelper.h

	codegen/DictOperations.cpp
	codegen/DictOperations.hpp
	codegen/PeepholeOptimizer.cpp
	codegen/PeepholeOptimizer.hpp
	codegen/SizeOptimizer.cpp
	codegen/SizeOptimizer.hpp
	codegen/StackOpcodeSquasher.cpp
	codegen/StackOpcodeSquasher.hpp
	codegen/StackOptimizer.cpp
	codegen/StackOptimizer.hpp
	codegen/TVM.cpp
	codegen/TVM.hpp
	codegen/TVMABI.cpp
	codegen/TVMABI.hpp
	codegen/TVMAnalyzer.cpp
	codegen/TVMAnalyzer.hpp
	codegen/TvmAst.cpp
	codegen/TvmAst.hpp
	codegen/TvmAstVisitor.cpp
	codegen/TvmAstVisitor.hpp
	codegen/TVMCommons.cpp
	codegen/TVMCommons.hpp
	codegen/TVMConstants.hpp
	codegen/TVMContractCompiler.cpp
	codegen/TVMContractCompiler.cpp
	codegen/TVMContractCompiler.hpp
	codegen/TVMContractCompiler.hpp
	codegen/TVMExpressionCompiler.cpp
	codegen/TVMExpressionCompiler.hpp
	codegen/TVMFunctionCall.cpp
	codegen/TVMFunctionCall.hpp
	codegen/TVMFunctionCompiler.cpp
	codegen/TVMFunctionCompiler.hpp
	codegen/TVMInlineFunctionChecker.cpp
	codegen/TVMInlineFunctionChecker.hpp
	codegen/TVMPusher.cpp
	codegen/TVMPusher.hpp
	codegen/TVMSimulator.cpp
	codegen/TVMSimulator.hpp
	codegen/TVMStructCompiler.cpp
	codegen/TVMStructCompiler.hpp
	codegen/TVMTypeChecker.cpp
	codegen/TVMTypeChecker.hpp
)

add_library(solidity ${sources})
target_link_libraries(solidity PUBLIC langutil solutil Boost::boost Boost::filesystem Boost::system fmt::fmt-header-only Threads::Threads)
